font fixed, spacing fixed, cleanup przewagi, close all groups

--- a/karty-front/app/dekoracje/[id]/dekoracja.module.css
+++ b/karty-front/app/dekoracje/[id]/dekoracja.module.css
@@ -31,6 +31,10 @@
     margin: 5px 0;
     box-sizing: border-box;
   }
+
+  .largeSelect {
+    min-height: 300px;
+  }
   
   .button {
     padding: 10px;
